--- a/login-page-backend/.env
+++ b/login-page-backend/.env
@@ -1,1 +1,2 @@
-MONGODB_URI = mongodb+srv://KingJp19:jp0819@cluster1.hw40o.mongodb.net/students
+MONGODB_URI=mongodb+srv://KingJp19:jp0819@cluster1.hw40o.mongodb.net/students?retryWrites=true&w=majority
+JWT_SECRET=MySuperSecretKey_2024_@!123
